# shub

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis-workarounds.sh  .travis.yml  CHANGES.rst  LICENSE  Makefile  Pipfile  README.rst  RELEASE.md  appveyor.yml  pyproject.toml  pytest.ini  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: checks.yml  freeze-publish.yml  freeze-release-publish.yml  publish.yml  python-app.yml  tests.yml
docs/: Makefile  conf.py  configuration.rst  custom-images-contract.rst  deploy-custom-image.rst  deploying.rst  index.rst  make.bat  quickstart.rst  requirements.in  requirements.txt  scheduling.rst
docs/_static/: theme_overrides.css
freeze/: shubrunner.py
kumo_release/: build.py  check.py  deploy.py  init.py  push.py  test.py  tool.py  upload.py  utils.py
shub/: __init__.py  __main__.py  auth.py  bootstrap.py  cancel.py  click_utils.py  compat.py  config.py  copy_eggs.py  delete.py  deploy.py  deploy_egg.py  deploy_reqs.py  exceptions.py  fetch_eggs.py  hubstorage.py  items.py  jobmeta.py  jobs.py  list_stacks.py  log.py  login.py  logout.py  migrate_eggs.py  request.py  requests.py  schedule.py  scrapycfg.py  search.py  stats.py  status.py  sync_project.py  tool.py  utils.py  validation.py  version.py
shub_image/: build.py  check.py  deploy.py  init.py  list.py  push.py  test.py  tool.py  upload.py  utils.py
shub_temp/: .travis.yml  requirements.in  requirements.txt  setup.py
tests/: conftest.py  requirements-py2.txt  requirements.in  requirements.txt  test_bootstrap.py  test_build.py  test_cancel.py  test_check.py  test_config.py  test_deploy.py  test_deploy_egg.py  test_deploy_reqs.py  test_end_to_end.py  test_fetch_eggs.py  test_init.py  test_items.py  test_jobresource.py  test_list.py  test_list_stacks.py  test_login.py  test_logout.py  test_migrate_eggs.py  test_push.py  test_schedule.py  test_test.py  test_tool.py  test_upload.py  test_utils.py  test_validation.py  utils.py
(+53 files in other folders)
